--- a/src/main/resources/edu/ntnu/idatt1002/k2g10/todolistapp/css/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k2g10/todolistapp/css/style.css
@@ -64,6 +64,7 @@
 
 .search-filter-box {
     -fx-text-fill: -fill-color;
+    -fx-prompt-text-fill: -prompt-color;
     -fx-background-color: -textfield-background-color;
     -jfx-focus-color: -border-color;
     -jfx-unfocus-color: -unfocus-color;
@@ -127,84 +128,35 @@
     -fx-background-color: -background-color;
     -fx-text-fill: -fill-color;
 }
+
+.categories-list {
+    -fx-background-color: transparent;
+}
 /*
 ------------- End Left Menu List Views -----------------
  */
 
-
 /*
----------- Table View --------------
+---------- List View --------------
  */
-.table-list {
-    -fx-background-color: -table-background-color;
+.hBoxL {
+    -fx-background-color: -user-menu-background-color;
 }
 
-.table-list .column-header-background .filler {
-    -fx-background-color: -table-header-color;
+.hBoxR{
+    -fx-background-color: -user-menu-background-color;
 }
 
-.table-list .corner {
-    -fx-background-color: -table-corner-color;
-}
-
-.table-list .column-header-background {
-    -fx-background-color: -table-gradient;
-    -fx-padding: 0px 0px 5px 0px;
-}
-
-.table-list .column-header {
-    -fx-background-color: transparent;
-}
-
-.table-list .table-cell{
-    -fx-border-color: transparent;
-    -fx-padding: 2 0 2 10px;
-}
-.table-row-cell:hover{
-    -fx-background-color: whitesmoke;
-    -fx-text-background-color: red;
-}
-.table-row-cell:odd{
-    -fx-background-color: -odd-cell-color;
-    -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
-}
-.table-row-cell:even{
-    -fx-background-color: -even-cell-color;
-    -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
-}
-
-.table-view .virtual-flow .scroll-bar:vertical,
-.table-view .virtual-flow .scroll-bar:vertical .track,
-.table-view .virtual-flow .scroll-bar:vertical .track-background,
-.table-view .virtual-flow .scroll-bar:horizontal,
-.table-view .virtual-flow .scroll-bar:horizontal .track,
-.table-view .virtual-flow .scroll-bar:horizontal .track-background {
-    -fx-background-color: transparent;
-}
-
-.table-view .virtual-flow .scroll-bar .increment-button,
-.table-view .virtual-flow .scroll-bar .decrement-button {
-    -fx-opacity: 0;
-    -fx-padding: 2;
-}
-
-.table-view .virtual-flow .scroll-bar:vertical .thumb{
-    -fx-background-color:  linear-gradient(to bottom, #1dbbdd44, #93f9b944);
-}
-.table-view .virtual-flow .scroll-bar:horizontal .thumb {
-    -fx-background-color:  linear-gradient(to right, #1dbbdd44, #93f9b944);
-}
-
-.table-row-cell:highlighted {
-    -fx-background-color: #81c483;
-    -fx-background-radius: 15px;
+.taskViewBG {
+    -fx-background-color: -menu-background-color;
 }
 /*
-------------- End Table View ---------------
+------------- End List View ---------------
  */
 
+/*
+---------- Date Picker -------------
+ */
 .date-picker .text-field {
     -fx-control-inner-background: -background-color;
 }
@@ -222,4 +174,26 @@
 .date-picker-popup > * > .date-cell {
     -fx-background-color: -background-color;
     -fx-text-fill: -fill-color;
+}
+/*
+------------- End Date Picker ---------------
+ */
+
+/*
+--------- Settings ----------
+ */
+.mailTF {
+    -fx-prompt-text-fill: -prompt-color;
+}
+
+.tlfTF {
+    -fx-prompt-text-fill: -prompt-color;
+}
+
+.usernameTF {
+    -fx-prompt-text-fill: -prompt-color;
+}
+
+.passwordTF {
+    -fx-prompt-text-fill: -prompt-color;
 }
